--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Fetched data is stored as message in your inbox"
-    />
-</LinearLayout>
+<ScrollView android:id="@+id/scroll_detail_view"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent">
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Fetched data is stored as message in your inbox"
+                />
+        <Button android:id="@+id/close" android:layout_width="fill_parent"
+                android:layout_marginLeft="80dip" android:layout_marginRight="80dip"
+                android:layout_marginTop="10dip" android:layout_height="wrap_content"
+                android:text="Close"/>
+    </LinearLayout>
+</ScrollView>
 
